Revision history for WWW::Mechanize

Please note that WWW::Mechanize and Test::WWW::Mechanize are no
longer using rt.cpan.org for bug tracking.  They are now being
tracked via Google Code at
http://code.google.com/p/www-mechanize/issues/list

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

1.50        Sun Sun Oct 26 22:42:46 CDT 2008
========================================
[THINGS THAT MAY BREAK YOUR CODE]
WWW::Mechanize now requires version 5.815 of LWP.  This in itself
may cause problems for you because of changes in how LWP does
authentication.


1.49_01     Sat Sep 27 23:50:04 CDT 2008
========================================
[THINGS THAT MAY BREAK YOUR CODE]
The autocheck argument to the constructor is now ON by default,
unless WWW::Mechanize is being subclassed.  There are so many new
programmers whose ->get() calls fail unchecked that I'm now putting
on the seat belts for them.

[FIXES]
I do believe we are on the way to having all the encoding problems
ironed out.  This version incorporates a patch from here:

    http://code.google.com/p/www-mechanize/issues/detail?id=61

and tests from Miyagawa's WWW::Mechanize::DecodedContent

    http://search.cpan.org/dist/WWW-Mechanize-DecodedContent/

to finally fix this.

[ENHANCEMENTS]
You can now specify not to set up the proxy, if there is one.  The
proxy causes problems for Crypt::SSLeay.  For details see:
http://code.google.com/p/www-mechanize/issues/detail?id=39

[DOCUMENTATION]
Fixed internal links.

[INTERNALS]
Lots of refactoring based on Schwern's "Skimmable Code" talk.

http://use.perl.org/~schwern/journal/36704
http://schwern.org/~schwern/talks/Skimmable%20Code%20-%20YAPC-NA-2008.pdf


1.34        Mon Dec 10 00:30:39 CST 2007
========================================
[FIXES]
Many fixes to make the test suite more portable.


1.32        Tue Oct 30 12:02:17 CDT 2007
========================================
[ENHANCEMENTS]