@@ -46,6 +46,7 @@ my $parms = {
         'LWP::UserAgent'           => 5.815,
         'Pod::Usage'               => 0,
         'Test::More'               => 0.34,
+        'Test::Warn'               => 0.11,
         'URI'                      => 1.25,
         'URI::URL'                 => 0,
         'URI::file'                => 0,
