@@ -28,11 +28,11 @@ STANDARD_STACK: {
     is( scalar @{$mech->{page_stack}}, 1, 'Pushed item onto page stack' );
     $mech->_push_page_stack();
     is( scalar @{$mech->{page_stack}}, 2, 'Pushed item onto page stack' );
-    $mech->_pop_page_stack();
+    $mech->back();
     is( scalar @{$mech->{page_stack}}, 1, 'Popped item from page stack' );
-    $mech->_pop_page_stack();
+    $mech->back();
     is( scalar @{$mech->{page_stack}}, 0, 'Popped item from page stack' );
-    $mech->_pop_page_stack();
+    $mech->back();
     is( scalar @{$mech->{page_stack}}, 0, 'Cannot pop beyond end of page stack' );
 }
 
